# sw-nav-module

./: .gitattributes  .gitignore  .tmp_expanded_robot.urdf  README.md  robot.yaml  setup.sh  sim.yaml
docs/: diplomova_prace_architektura_rmodus_cisty_text.md  rmodus_architektura_a_konfigurace.md  rosdep_a_systemove_zavislosti.md
r-modus-brain/: package.xml  setup.cfg  setup.py
r-modus-brain/config/: ekf_params.yaml  nav2_params.yaml  slam_params.yaml
r-modus-brain/launch/: real_robot.launch.py  robot.launch.py
r-modus-brain/r-modus-brain/: node_websocket.py
r-modus-bringup/: package.xml  setup.cfg  setup.py
r-modus-bringup/config/: user_params.yaml
r-modus-bringup/launch/: navigation.launch.py  rviz.launch.py
r-modus-hw/: package.xml  setup.cfg  setup.py
r-modus-hw/r-modus-hw/: node_display.py  node_get_wifi.py  node_motors.py  node_system_monitor.py
r-modus-interface/: CMakeLists.txt  package.xml
r-modus-interface/msg/: PiStatus.msg
r-modus-interface/srv/: GetWifiNetworks.srv
r-modus-sim/: package.xml  setup.py
r-modus-sim/config/: bridge_parameters.yaml  simulation.config
r-modus-sim/launch/: sim.launch.py  sim_robot.launch.py
r-modus-sim/urdf/: robot.gazebo  robot.xacro
rmodus_autonomy/: package.xml  setup.cfg  setup.py
rmodus_autonomy/config/: bumper_safety_stop.yaml  ekf_params.yaml  nav2_params.yaml  rf2o_params.yaml  slam_params.yaml
rmodus_autonomy/launch/: autonomy.launch.py  ekf_dynamic.launch.py  nav2.launch.py
rmodus_autonomy/resource/: rmodus_autonomy
rmodus_autonomy/rmodus_autonomy/: __init__.py  node_bumper_safety_stop.py  node_obstacle_cloud.py
rmodus_brain/: package.xml  setup.cfg  setup.py
rmodus_brain/config/: ekf_params.yaml  nav2_params.yaml  rf2o_params.yaml
rmodus_brain/launch/: brain.launch.py  ekf_dynamic.launch.py  nav2.launch.py
rmodus_brain/rmodus_brain/: fastapi_test_server.py  node_obstacle_cloud.py  node_websocket.py
rmodus_bringup/: package.xml  rmodus_bringup  setup.cfg  setup.py
rmodus_bringup/config/: base_params.yaml  robot.yaml  rviz_config.rviz  user_params.yaml
rmodus_bringup/launch/: pc_dev.launch.py  robot.launch.py  robot_edge.launch.py  rviz.launch.py
rmodus_description/: package.xml  setup.cfg  setup.py
rmodus_description/config/: default_robot_config.yaml  robot_config.yaml
rmodus_description/launch/: description.launch.py
rmodus_description/resource/: rmodus_description
rmodus_description/urdf/: base.urdf.xacro  bumpers.urdf.xacro  cliff_sensors.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro  robot.urdf.xacro
rmodus_hw/: package.xml  requirements-pip.txt  setup.cfg  setup.py
rmodus_hw/config/: base_params.yaml  robot.yaml  robot_config.yaml
rmodus_hw/launch/: hw.launch.py
rmodus_hw/rmodus_hw/: node_bumper_sensors.py  node_cliff_sensors.py  node_display.py  node_fan_control.py  node_flow_sensor.py  node_get_wifi.py  node_lidar.py  node_map_joy.py  node_motors.py  node_system_monitor.py
rmodus_hw/rmodus_hw/utils/: display.py  lidar.py  pwm_control.py  test_flow.py  wifi.py
rmodus_hw/urdf/: base.urdf.xacro  bumpers.urdf.xacro  cliff_sensors.urdf.xacro  imu.urdf.xacro  lidar.urdf.xacro  robot.urdf.xacro
rmodus_interface/: CMakeLists.txt  package.xml  rmodus_interface
rmodus_interface/msg/: Bumper.msg  GamepadState.msg
rmodus_sim/: TEMP  package.xml  setup.cfg  setup.py
rmodus_sim/.github/: copilot-instructions.md
rmodus_sim/config/: base_params.yaml  bridge_parameters.yaml  robot_config.yaml  sim.yaml  simulation.config
rmodus_sim/launch/: sim.launch.py
rmodus_sim/rmodus_sim/: sim_bumper_bridge.py
rmodus_sim/urdf/: Untitled  base.urdf.xacro  base_visual.urdf.xacro  bumpers.urdf.xacro  cliff_sensors.urdf.xacro  control.urdf.xacro  gz_bumpers.urdf.xacro  gz_cliff_sensors.urdf.xacro  gz_imu.urdf.xacro  imu.urdf.xacro  (+6 more)
rmodus_web/: package.xml  setup.cfg  setup.py
rosdep/: rmodus_custom.yaml
(+58 files in other folders)
